--- a/dulaj-portfolio/package.json
+++ b/dulaj-portfolio/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "dompurify": "^3.2.6",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-quill": "^2.0.0",
