--- a/dulaj-portfolio/package.json
+++ b/dulaj-portfolio/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.3",
+    "react-simple-typewriter": "^5.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
