--- a/dulaj-portfolio/package.json
+++ b/dulaj-portfolio/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.3",
     "react-simple-typewriter": "^5.0.1",
