--- a/dulaj-portfolio/package.json
+++ b/dulaj-portfolio/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@hello-pangea/dnd": "^18.0.1",
     "dompurify": "^3.2.6",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.12",
