--- a/dulaj-portfolio/package.json
+++ b/dulaj-portfolio/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
